force-app/main/default/objects/TimeEntry__c/TimeEntry__c.object-meta.xml
<CustomObject>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{0000000000}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>