force-app/main/default/objects/TimeEntry__c/fields/DurationHours__c.field-meta.xml
<CustomField>
    <fullName>DurationHours__c</fullName>
    <formula>( IF( ISBLANK( EndTime__c ) , NOW() , EndTime__c ) - StartTime__c ) * 24 - NumberOfSlicedOutMinutes__c / 60</formula>
    <label>Duration (Hr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>