force-app/main/default/objects/TimeEntry__c/fields/DurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationMinutes__c</fullName>
    <formula>DurationHours__c * 60</formula>
    <label>Duration (Min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>