force-app/main/default/objects/TimeEntry__c/fields/EndTimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>EndTimeZoneSidKey__c</fullName>
    <description>The time zone in which the End Time was entered</description>
    <inlineHelpText>The time zone in which the End Time was entered</inlineHelpText>
    <label>End Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeZoneSidKey</valueSetName>
    </valueSet>
</CustomField>