force-app/main/default/objects/TimeEntry__c/fields/HasVerifiedEndTimeZone__c.field-meta.xml
<CustomField>
    <fullName>HasVerifiedEndTimeZone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the End Time Zone has been verified with the source of truth for the user&#39;s time zone</description>
    <inlineHelpText>Whether the End Time Zone has been verified with the source of truth for the user&#39;s time zone</inlineHelpText>
    <label>Verified End Time Zone</label>
    <type>Checkbox</type>
</CustomField>