force-app/main/default/objects/TimeEntry__c/fields/HasVerifiedStartTimeZone__c.field-meta.xml
<CustomField>
    <fullName>HasVerifiedStartTimeZone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the Start Time Zone has been verified with the source of truth for the user&#39;s time zone</description>
    <inlineHelpText>Whether the Start Time Zone has been verified with the source of truth for the user&#39;s time zone</inlineHelpText>
    <label>Verified Start Time Zone</label>
    <type>Checkbox</type>
</CustomField>