force-app/main/default/objects/TimeEntry__c/fields/NumberOfSlicedMinutes__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSlicedMinutes__c</fullName>
    <label>Total Sliced Minutes</label>
    <summarizedField>TimeSlice__c.NumberOfMinutes__c</summarizedField>
    <summaryForeignKey>TimeSlice__c.TimeEntry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>