force-app/main/default/objects/TimeEntry__c/fields/NumberOfSlicedOutMinutes__c.field-meta.xml
<CustomField>
    <fullName>NumberOfSlicedOutMinutes__c</fullName>
    <label>Num Sliced Out Minutes</label>
    <summarizedField>TimeSlice__c.NumberOfMinutes__c</summarizedField>
    <summaryFilterItems>
        <field>TimeSlice__c.Tag__c</field>
        <operation>equals</operation>
        <value>out</value>
    </summaryFilterItems>
    <summaryForeignKey>TimeSlice__c.TimeEntry__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>