force-app/main/default/objects/TimeEntry__c/fields/SlackTeamId__c.field-meta.xml
<CustomField>
    <fullName>SlackTeamId__c</fullName>
    <label>Slack Team ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>