force-app/main/default/objects/TimeEntry__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>