force-app/main/default/objects/TimeEntry__c/fields/StartTimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>StartTimeZoneSidKey__c</fullName>
    <description>The time zone in which the Start Time was entered</description>
    <inlineHelpText>The time zone in which the Start Time was entered</inlineHelpText>
    <label>Start Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeZoneSidKey</valueSetName>
    </valueSet>
</CustomField>