force-app/main/default/objects/TimeEntry__c/validationRules/EndTime.validationRule-meta.xml
<ValidationRule>
    <fullName>EndTime</fullName>
    <active>true</active>
    <description>End Time must be after Start Time</description>
    <errorConditionFormula>IF(
  ISBLANK( EndTime__c ) ,
  FALSE ,
  EndTime__c &lt; StartTime__c
)</errorConditionFormula>
    <errorDisplayField>EndTime__c</errorDisplayField>
    <errorMessage>End Time must be after Start Time</errorMessage>
</ValidationRule>